# srbench-competition-2023-track-2-c-bio-ufpr

./: .gitignore  BikeLanesConnections.txt  GNN_Example.ipynb  SpatioTemporalGNN.ipynb  TODO.md  cora_example.ipynb  dataset_best_models  eda.ipynb  extra_installs.sh  general_requirements.txt  graphGP.ipynb  graph_modelling.ipynb  hall_of_fame_2023-05-23_231022.083.pkl  hall_of_fame_2023-05-23_233633.743.csv  hall_of_fame_2023-05-23_233633.743.pkl  hall_of_fame_2023-05-23_233722.687.csv.bkup  hall_of_fame_2023-05-23_233722.687.pkl  inputting_missing_values.ipynb  installation_script_gnn.sh  installation_script_gp.sh  pyproject.toml
datasets/: BikeLanesConnections.txt
src/: graphGP.ipynb  installation.md
