[tool.poetry]
name = "srbench-competition-2023-track-2-c-bio-ufpr"
version = "0.1.0"
description = ""
authors = ["martins6 <adrielfalcao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
numpy = "^1.24.3"
seaborn = "^0.12.2"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"
tqdm = "^4.65.0"
torch-geometric = "^2.3.1"
pyg-lib = {version = "^0.2.0+pt20cpu", source = "pyg-lib"}
torch-scatter = {version = "^2.1.1+pt20cpu", source = "pyg-lib"}
torch-sparse = {version = "^0.6.17+pt20cpu", source = "pyg-lib"}
torch-cluster = {version = "^1.6.1+pt20cpu", source = "pyg-lib"}
torch-spline-conv = {version = "^1.2.2+pt20cpu", source = "pyg-lib"}


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
default = false
secondary = true


[[tool.poetry.source]]
name = "pyg-lib"
url = "https://data.pyg.org/whl/torch-2.0.0+cpu.html"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
